--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -52,6 +52,7 @@ uk:
       number_of_barriers: Кількість перешкод
       errors_in_form: Помилки у формі
     index:
+      string_0: "ВАЖЛИВО: Ігрове поле стискається по розмірах екрану (особливо враховуйте на мобільних пристроях). Задавайте коректні розміри поля."
       string_1: "Це класична гра пітон (змія). Пітон (ooooos) повзає по полю, збирає яблука ( @ ) та росте. Може зіткнутися з перешкодою ( # ). Яблуко яке з'їли з'являється на новому місці."
       string_2: Рух відбувається за допомогою клавіш - стрілочок.
       string_3: Частота оновлення 0.3 секунд.
