processed pull request

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -65,6 +65,7 @@ en:
       email: Email
     show:
       text_title: Your statistics
+      total_games: total games
       column_1: Game started
       column_2: Game duration
       column_3: Field size
